# Samoyeds-Kernel

./: .gitmodules  CMakeLists.txt  README.md  build.sh
benchmark/ssmm/: copy_helper_constant_meta.h  copy_helper_true_metadata.h  horizontal_spmm_kernel_block.h  horizontal_spmm_kernel_constant_meta.h  horizontal_spmm_kernel_op_orig.h  horizontal_spmm_kernel_true_metadata.h  horizontal_ssmm_kernel.h  horizontal_ssmm_kernel_block.h  horizontal_ssmm_kernel_constant_meta.h  horizontal_ssmm_kernel_op.h  horizontal_ssmm_kernel_op_bk_up.h  horizontal_ssmm_kernel_op_orig.h  horizontal_ssmm_kernel_true_metadata.h
